--- a/FrontEnd/simple_store/package.json
+++ b/FrontEnd/simple_store/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.4",
     "@chakra-ui/react": "^2.2.4",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
@@ -21,7 +22,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "server" :"json-server --watch db.json --port 5050" ,
+    "server": "json-server --watch db.json --port 5050",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
